tests/purs/failing/FloatingViaTypeVariables.out
Error found:
in module [33mMain[0m
at tests/purs/failing/FloatingViaTypeVariables.purs:9:1 - 9:36 (line 9, column 1 - line 9, column 36)

  Cannot derive instance via [33mV a[0m for
  [33m          [0m
  [33m  Main.C D[0m
  [33m          [0m
  because the type variable [33ma[0m is bound in [33mV a[0m but is not mentioned in the instance head.


See https://github.com/purescript/documentation/blob/master/errors/FloatingViaTypeVariables.md for more information,
or to contribute content related to this error.

